--- a/pages/shop-cart/index.wxml
+++ b/pages/shop-cart/index.wxml
@@ -78,7 +78,7 @@
       <view class="pop-goods-info">
         <view class="pop-img-box">
           <!--          <image src="{{currentShop.fileUrls[0]}}" class="goods-thumbnail"/>-->
-          <image src="http://www.xlzy520.cn/750_600/餐馆餐具.png" class="goods-thumbnail"/>
+          <image src="https://www.xlzy520.cn/750_600/餐馆餐具.png" class="goods-thumbnail"/>
         </view>
         <view class="pop-goods-des">
           <view class="pop-goods-title">{{currentShop.goodsName}}</view>
