--- a/pages/shop-cart/index.wxss
+++ b/pages/shop-cart/index.wxss
@@ -163,6 +163,9 @@ page {
   font-size: 24rpx;
   text-align: center
 }
+.goods-info .text-box.restaurant .buy-num{
+  right: 0;
+}
 
 .goods-info .text-box .buy-num .jian-btn {
   width: 48rpx;
@@ -434,6 +437,7 @@ page {
   height: 100%;
 }
 .jiu-can-box .num-box .hui{
+  pointer-events: none;
   background-color: #f5f5f9;
 }
 .popup-join-btn{
