nav-top组件增加wx：key

--- a/components/top-nav/index.wxml
+++ b/components/top-nav/index.wxml
@@ -1,5 +1,5 @@
 <view class="top-nav">
-  <view wx:for="{{tabList}}" data-index="{{index}}" bindtap="navTap"
+  <view wx:for="{{tabList}}" wx:key="item" data-index="{{index}}" bindtap="navTap"
         class="top-nav-tab {{index === currentTab ? 'active' : ''}}">
     <view class="top-nav-label">{{item}}</view>
   </view>
