--- a/pages/goods-details/index.wxml
+++ b/pages/goods-details/index.wxml
@@ -27,7 +27,8 @@
       </view>
       <view class="row goods-title-and-type">
         <view class="goods-title">{{goodsDetail.goodsName}}</view>
-        <view class="goods-type {{goodsDetail.useType==='学校'?'school':'restaurant'}}">{{goodsDetail.useType}}</view>
+        <view class="goods-type {{goodsDetail.specsList[0].pack?'school':'restaurant'}}">
+          {{goodsDetail.specsList[0].pack?'学校':'餐馆'}}</view>
       </view>
     </view>
     <view class="goods-specification">
