--- a/pages/address-add/index.wxml
+++ b/pages/address-add/index.wxml
@@ -20,7 +20,7 @@
         <input name="mobile" class="input" maxlength="11" type="number" placeholder-class="phcolor"
                placeholder="手机号码" value="{{addressData.mobile}}"/>
       </view>
-      <view class="addr-details">
+      <view class="addr-details" hidden="{{!identityHidden}}">
             <textarea name="address" placeholder="详细地址：县镇+街道+道路门牌号+企业单位地址名称"
                       placeholder-class="phcolor" value="{{addressData.address}}"/>
       </view>
