--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -1,7 +1,6 @@
 <view class="container">
   <view class="userinfo">
-   <image class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>
-<!--    <text class="userinfo-nickname">{{ userInfo.nickName }}</text>-->
+    <open-data type="userAvatarUrl" class="userinfo-avatar"></open-data>
   </view>
   <view class="my-wrapper order">
     <view class="my-wrapper-title">我的订单</view>
