--- a/pages/order-my/index.wxss
+++ b/pages/order-my/index.wxss
@@ -47,6 +47,7 @@
   background-color: #fff;
   margin-top: 30rpx;
   padding: 0 30rpx;
+  border-radius: 12rpx;
 }
 
 .order-list .a-order .order-number {
@@ -152,7 +153,7 @@
 .a-order .order-action .btn,
 .a-order .order-action .topay-btn{
   width: 148rpx;
-  height: 51rpx;
+  /*height: 51rpx;*/
   box-sizing: border-box;
   text-align: center;
   line-height: 51rpx;
