--- a/pages/goods-details/index.wxss
+++ b/pages/goods-details/index.wxss
@@ -153,7 +153,7 @@ swiper-item image {
 }
 .footer-box .join-shop-cart,
 .footer-box .now-buy{
-  width: 345rpx;
+  width: 295rpx;
   height: 75rpx;
 }
 
@@ -342,4 +342,29 @@ swiper-item image {
   font-size:28rpx;
   color:#ffffff;
   border-radius: 44.5rpx;
+}
+
+.shop-cart{
+  width: 100rpx;
+  height: 75rpx;
+  line-height: 75rpx;
+}
+.shop-cart image{
+  width: 47rpx;
+  height: 36rpx;
+}
+.badge{
+  position: absolute;
+  top:15rpx;
+  left: 0rpx;
+  transform: translateY(-50%) translateX(100%);
+  text-align: center;
+  vertical-align: middle;
+  min-width: 34rpx;
+  height: 34rpx;
+  line-height: 34rpx;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #FE0B42;
+  font-size: 27rpx;
 }
