--- a/pages/select-address/index.wxml
+++ b/pages/select-address/index.wxml
@@ -10,8 +10,8 @@
         <view class="{{item.addressType?'restaurant':'school'}}">{{item.addressType?'餐馆':'学校'}}</view>
         <view class="address">{{item.address||item.schoolName}}</view>
       </view>
-      <view class="address-action" bindtap="updateAddressDefault">
-        <view class="address-default">
+      <view class="address-action">
+        <view class="address-default" catchtap="updateAddressDefault" data-id="{{item.addressId}}">
           <image class="address-check-icon" src="/images/{{item.isDefault?'check':'unchecked'}}.png"></image>
           <view class="address-default-text">默认{{item.addressType?'地址':'班级'}}</view>
         </view>
