--- a/pages/jinxiaocun/index.wxml
+++ b/pages/jinxiaocun/index.wxml
@@ -18,7 +18,7 @@
     </picker>
     <view class="submit" bindtap="submit">查询</view>
   </view>
-  <view class="no-record" wx:if="{{!recordList.length}}">
+  <view class="no-record" wx:if="{{!recordList.length&&currentTab===0}}">
     <image src="/images/no-order.png"></image>
     <view class="no-content-text">暂无进销存记录</view>
     <view class="no-content-text">去选购一下餐具吧～</view>
@@ -41,7 +41,7 @@
         </view>
       </view>
     </view>
-    <view class="record-no-more" hidden="{{noMore}}">没有更多了</view>
+    <view class="record-no-more" hidden="{{!noMore}}">没有更多了</view>
   </view>
   <view class="store-current" hidden="{{!currentTab}}">
     <view class="store-row" wx:for="{{storeMap}}" wx:for-item="goods" :key="{{goods.useType}}">
