--- a/pages/order-details/index.wxss
+++ b/pages/order-details/index.wxss
@@ -172,7 +172,6 @@
 .order-info,.peisong{
   background:#fff;
   width: 100%;
-  height:193rpx;
   display:flex;
   flex-direction:column;
   justify-content:space-between;
@@ -185,6 +184,7 @@
   line-height: 30rpx;
   font-family: PingFang SC Bold, sans-serif;
   font-weight: 600;
+  padding-bottom: 10rpx;
 }
 .order-info-header:before, .peisong-info-header:before{
   display: inline-block;
@@ -197,6 +197,7 @@
 .order-info .label{
   display: flex;
   font-size: 26rpx;
+  padding: 6rpx 0;
 }
 .order-info .label .title{
   color: #888;
@@ -209,6 +210,7 @@
   width: 100%;
   height: 205rpx;
   margin-top: 30rpx;
+  margin-bottom: 99rpx;
 }
 .peisong .label{
   display: flex;
@@ -231,6 +233,8 @@
   margin-top: 30rpx;
   padding: 0 30rpx;
   box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
 }
 .order-operation .btn-row{
   display: flex;
