--- a/pages/order-my/index.wxml
+++ b/pages/order-my/index.wxml
@@ -38,10 +38,12 @@
         <view class="heji-price">{{item.amount}}</view>
       </view>
       <view class="order-action">
-        <view class="btn cancel-btn" hidden="{{!item.orderStatusId}}" bindtap="cancelOrderTap"
+        <view class="btn cancel-btn" wx:if="{{item.statusCode==='unpaid'}}" bindtap="cancelOrderTap"
               data-id="{{item.orderId}}">取消订单</view>
-        <view class="btn topay-btn" hidden="{{!item.orderStatusId}}" bindtap="toPayTap" data-id="{{item.orderId}}"
+        <view class="btn topay-btn" wx:if="{{item.statusCode==='unpaid'}}" bindtap="toPayTap" data-id="{{item.orderId}}"
               data-money="{{item.amount}}">立即支付</view>
+        <view class="btn topay-btn" wx:if="{{item.statusCode==='unreceived'}}" bindtap="shouhuo"
+              data-id="{{item.orderId}}">确认收货</view>
       </view>
     </view>
 
