--- a/pages/shop-cart/index.wxss
+++ b/pages/shop-cart/index.wxss
@@ -155,16 +155,15 @@ page {
   width: 164rpx;
   height: 48rpx;
   line-height: 48rpx;
-  position: absolute;
-  right: 30rpx;
-  bottom: 0;
   display: flex;
-  /*justify-content: space-between;*/
   font-size: 24rpx;
-  text-align: center
+  text-align: center;
+  margin-top: 67rpx;
+  margin-left: 199rpx;
+
 }
 .goods-info .text-box.restaurant .buy-num{
-  right: 0;
+
 }
 
 .goods-info .text-box .buy-num .jian-btn {
