--- a/pages/goods-details/index.wxml
+++ b/pages/goods-details/index.wxml
@@ -1,20 +1,20 @@
 <!--<import src="../../wxParse/wxParse.wxml"/>-->
 <view class="container">
-  <view class="goods-img-wrap swiper-container" wx:if="{{imgs.length>1}}">
+  <view class="goods-img-wrap swiper-container" wx:if="{{goodsDetail.fileUrls.length>1}}">
     <swiper class="swiper_box" bindchange="swiperchange">
-      <block wx:for="{{imgs}}" wx:key="id">
+      <block wx:for="{{goodsDetail.fileUrls}}" wx:key="id">
         <swiper-item>
-          <image src="{{item}}" class="slide-image" width="750" height="600" mode="aspectFit" lazy-load="true"/>
+          <image src="{{'https://'+item}}" class="slide-image" width="750" height="600" mode="aspectFit" lazy-load="true"/>
         </swiper-item>
       </block>
     </swiper>
     <view class="dots">
-      <block wx:for="{{imgs}}" wx:key="unique">
+      <block wx:for="{{goodsDetail.fileUrls}}" wx:key="unique">
         <view class="dot{{index == swiperCurrent ? ' active' : ''}}"></view>
       </block>
     </view>
   </view>
-  <view class="goods-img-wrap" wx:if="{{false}}">
+  <view class="goods-img-wrap" wx:if="{{goodsDetail.fileUrls.length === 1}}">
 <!--    <image class="goods-img" src="{{goodsDetail.fileUrls[0]}}"></image>-->
     <image class="goods-img" src="http://www.xlzy520.cn/750_600/餐馆餐具.png"></image>
   </view>
