--- a/pages/order-my/index.wxml
+++ b/pages/order-my/index.wxml
@@ -14,7 +14,7 @@
       </view>
       <view class="goods-info" bindtap="orderDetail" data-id="{{item.orderId}}">
         <view class="goods-box" wx:for="{{item.orderDetails}}" wx:for-item="goods" wx:key="{{goods.orderId}}">
-<!--          <image src="{{goods.goodsUrl}}" class="goods-img"></image>-->
+<!--          <image src="https://axjieyakang.com/assets/{{goods.goodsUrl}}" class="goods-img"></image>-->
           <image src="http://49.234.212.216/164_164/宴席餐具.png" class="goods-img"></image>
           <view class="goods-right">
             <view class="goods-right-header">
