--- a/components/goods-list/index.wxml
+++ b/components/goods-list/index.wxml
@@ -4,7 +4,7 @@
         bindtap="toDetailsTap" data-id="{{item.goodsId}}">
     <view class="goods-item">
       <view class="img-box">
-        <!--<image src="http://84c0a094.ngrok.io/market/file/preview?fileUrl={{item.fileUrls[0]}}" class="image" mode="aspectFill"/>-->
+        <!--<image src="https://axjieyakang.com/assets/{{item.fileUrls[0]}}" class="image" mode="aspectFill"/>-->
         <image src="http://www.xlzy520.cn/164_164/餐馆餐具.png" class="image" mode="aspectFill"/>
       </view>
       <view class="goods-detail">
