--- a/pages/order-details/index.wxml
+++ b/pages/order-details/index.wxml
@@ -28,7 +28,7 @@
       <view class="goods-box" wx:for="{{orderDetail.orderDetails}}" wx:for-item="goods"
             bindtap="gotoGoods" wx:key="{{goods.orderId}}" data-id="{{goods.goodsId}}">
         <image src="http://www.xlzy520.cn/164_164/餐馆餐具.png" class="goods-img"></image>
-<!--        <image src="{{goods.goodsUrl}}" class="goods-img"></image>-->
+<!--        <image src="https://axjieyakang.com/assets/{{goods.goodsUrl}}" class="goods-img"></image>-->
         <view class="goods-right">
           <view class="goods-right-header">
             <view class="goods-name">{{goods.goodsName}}
