--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -19,7 +19,7 @@
     <view class="goods-list">
       <view class="a-goods" wx:for-items="{{goodsList}}" wx:key="{{index}}">
         <view class="img-box">
-<!--          <image src="{{item.fileUrls[0]}}" class="img"/>-->
+<!--          <image src="https://axjieyakang.com/assets/{{item.fileUrls[0]}}" class="img"/>-->
           <image src="http://www.xlzy520.cn/750_600/餐馆餐具.png" class="img"/>
         </view>
         <view class="text-box">
