--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,10 +5,13 @@
   <goods-list id="goods-list"></goods-list>
   <view class="partner-container">
     <view class="partner-header">合作伙伴</view>
-    <view class="partner-item" wx:for-items="{{partners}}" wx:key="{{index}}">
-      <image src="https://axjieyakang.com/assets/{{item.fileUrl}}" class="image" mode="aspectFill"/>
-      <view class="partner-modal"></view>
-      <view class="partner-name">- {{item.partnersName}} -</view>
-    </view>
+    <scroll-view class="container" scroll-y>
+      <view class="partner-item" wx:for-items="{{partners}}" wx:key="{{index}}">
+        <image src="https://axjieyakang.com/assets/{{item.fileUrl}}" lazy-load class="image" mode="aspectFill"/>
+        <view class="partner-modal"></view>
+        <view class="partner-name">- {{item.partnersName}} -</view>
+      </view>
+    </scroll-view>
+
   </view>
 </view>
