--- a/pages/goods-details/index.wxml
+++ b/pages/goods-details/index.wxml
@@ -4,7 +4,7 @@
     <swiper class="swiper_box" bindchange="swiperchange">
       <block wx:for="{{goodsDetail.fileUrls}}" wx:key="id">
         <swiper-item>
-          <image src="{{'https://'+item}}" class="slide-image" width="750" height="600" mode="aspectFit" lazy-load="true"/>
+          <image src="https://axjieyakang.com/750_600/餐馆餐具.png" class="slide-image" width="750" height="600" mode="aspectFit" lazy-load="true"/>
         </swiper-item>
       </block>
     </swiper>
@@ -16,7 +16,7 @@
   </view>
   <view class="goods-img-wrap" wx:if="{{goodsDetail.fileUrls.length === 1}}">
 <!--    <image class="goods-img" src="{{goodsDetail.fileUrls[0]}}"></image>-->
-    <image class="goods-img" src="http://www.xlzy520.cn/750_600/餐馆餐具.png"></image>
+    <image class="goods-img" src="https://axjieyakang.com/750_600/餐馆餐具.png"></image>
   </view>
   <view class="goods-content">
     <view class="goods-parameter">
