--- a/pages/shop-cart/index.wxml
+++ b/pages/shop-cart/index.wxml
@@ -79,8 +79,7 @@
     <view class="popup-contents">
       <view class="pop-goods-info">
         <view class="pop-img-box">
-          <!--          <image src="https://axjieyakang.com/assets/{{currentShop.fileUrls[0]}}" class="goods-thumbnail"/>-->
-          <image src="https://axjieyakang.com/164_164/餐馆餐具.png" class="goods-thumbnail"/>
+          <image src="https://axjieyakang.com/assets/{{currentShop.littleUrl}}" class="goods-thumbnail"/>
         </view>
         <view class="pop-goods-des">
           <view class="pop-goods-title">{{currentShop.goodsName}}{{currentShop.selectSpecLabel}}</view>
