--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -19,8 +19,7 @@
     <view class="goods-list">
       <view class="a-goods" wx:for-items="{{goodsList}}" wx:key="{{index}}">
         <view class="img-box">
-<!--          <image src="https://axjieyakang.com/assets/{{item.fileUrls[0]}}" class="img"/>-->
-          <image src="https://axjieyakang.com/164_164/餐馆餐具.png" class="img"/>
+          <image src="https://axjieyakang.com/assets/{{item.littleUrl}}" class="img"/>
         </view>
         <view class="text-box">
           <view class="name-price">
