--- a/pages/goods-details/index.wxml
+++ b/pages/goods-details/index.wxml
@@ -4,7 +4,7 @@
     <swiper class="swiper_box" bindchange="swiperchange">
       <block wx:for="{{goodsDetail.fileUrls}}" wx:key="id">
         <swiper-item>
-          <image src="https://axjieyakang.com/assets/{{item}}" class="slide-image" width="750" height="600" mode="aspectFit" lazy-load="true"/>
+          <image src="{{item}}" class="slide-image" width="750" height="600" mode="aspectFit" lazy-load="true"/>
         </swiper-item>
       </block>
     </swiper>
@@ -15,7 +15,7 @@
     </view>
   </view>
   <view class="goods-img-wrap" wx:if="{{goodsDetail.fileUrls.length === 1}}">
-    <image class="goods-img" src="https://axjieyakang.com/assets/{{goodsDetail.fileUrls[0]}}"></image>
+    <image class="goods-img" src="{{goodsDetail.fileUrls[0]}}"></image>
   </view>
   <view class="goods-content">
     <view class="goods-parameter">
@@ -65,7 +65,7 @@
     <view class="popup-contents">
       <view class="pop-goods-info">
         <view class="pop-img-box">
-          <image src="https://axjieyakang.com/assets/{{goodsDetail.littleUrl}}" class="goods-thumbnail"/>
+          <image src="{{goodsDetail.littleUrl}}" class="goods-thumbnail"/>
         </view>
         <view class="pop-goods-des">
           <view class="pop-goods-title">{{goodsDetail.goodsName}}</view>
