--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -54,7 +54,8 @@
         <view class="heji-yuan">¥ </view>
         <view class="heji-price">{{allGoodsPrice}}</view>
       </view>
-      <button class="to-pay-btn" formType="submit">提交订单</button>
+      <button class="to-pay-btn" bindtap="offlinePay">线下支付</button>
+      <button class="to-pay-btn" formType="submit">立即支付</button>
     </view>
   </form>
   <dialog wx:if="{{dialogText}}" type="{{dialogType}}" text="{{dialogText}}" bindclose="close"></dialog>
